# algo_rs

./: Cargo.toml  LICENSE  README.md
src/: ins_sort.rs  main.rs
