[package]
name = "algo_rs"
version = "0.1.0"
license = "MIT"
authors = ["kolampo94 <konlampro94@gmail.com>"]
edition = "2018"
publish = false
homepage = "https://github.com/you/grrs"
repository = "https://github.com/konlampro94/algo_rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
